wycofanie zmian zwiazanych z autoMapperem

--- a/Lab_ASP/Lab_ASP.csproj
+++ b/Lab_ASP/Lab_ASP.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Other\**" />
+    <Content Remove="Other\**" />
+    <EmbeddedResource Remove="Other\**" />
+    <None Remove="Other\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Data\SeedData.cs" />
   </ItemGroup>
 
